--- a/src/client/src/Components/Header/index.scss
+++ b/src/client/src/Components/Header/index.scss
@@ -1,4 +1,23 @@
-#test {
-  background: red;
-  padding: 50px;
+#header-root {
+  & * {
+    transition: .25s ease all;
+  }
+
+  .nav-default {
+    backdrop-filter: blur(8px);
+  }
+
+  .nav-dark {
+    background-color: rgba(26,32,44, .8);
+  }
+
+  .nav-light {
+    background-color: rgba(255,255,255,.8);
+  }
+
+  #button-container-box {
+    display: flex;    
+    justify-content: space-between;
+    align-items: center;
+  }  
 }
